<resources>
    <string name="app_name">Vidyut</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="server_client_id">717580917012-46jsjir6ao70do8kprgfrna4q1nrtk9l.apps.googleusercontent.com</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="qrcode">QRCode</string>
    <string name="title_about">About</string>
    <string name="Rs">\u20B9</string>
    <string name="login">Login</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="about_vidyut">Vidyut, the national multi-fest organized by Amrita Vishwa Vidyapeetham, Amritapuri campus is an endeavour to provide a symposium for students across the country to showcase and grow. Vidyut delivers bountiful opportunities for students to develop their unique skills by witnessing and partaking in the plethora of workshops, talks and competitions.</string>
    <string name="amrita_des">Amrita Vishwa Vidyapeetham is a multi-campus, multi-disciplinary research academia that is accredited \'A\' by NAAC and is ranked as one of the best research institutions in India. Amrita is spread across five campuses in three states of India - Kerala, Tamil Nadu and Karnataka, with the headquarters at Ettimadai, Coimbatore, Tamil Nadu. Amrita Vishwa Vidyapeetham continuously collaborates with top US universities including Ivy league universities and top European universities for regular student exchange programs, and has emerged as one of the fastest growing institutions of higher learning in India. The institution is managed by the Mata Amritanandamayi Math.</string>
    <string name="our_sponsors">Our Sponsors:</string>
    <string name="student_partner">Student Partner</string>
    <string name="digital_partner">Digital Partner</string>
    <string name="BannerUrl">https://vidyut.amrita.edu/static/images/banners/banner</string>

</resources>
