<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/navigation_home"
    android:title="@string/title_home"
    android:icon="@drawable/ic_home"
    android:enabled="true"
    app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/navigation_dashboard"
        android:title="@string/title_dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/navigation_qrcode"
        android:title="@string/qrcode"
        android:enabled="true"
        android:icon="@drawable/ic_blackberry_qr_code_variant"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/navigation_schedule"
        android:title="Schedule"
        android:enabled="true"
        android:icon="@drawable/baseline_schedule_black_18dp"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/navigation_about"
        android:title="@string/title_about"
        android:enabled="true"
        android:icon="@drawable/ic_icon"
        app:showAsAction="ifRoom"></item>
</menu>