<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:id="@+id/vlogo"
            android:layout_width="match_parent"
            android:layout_height="345dp"
            android:scaleType="fitXY"
            android:src="@drawable/vidyut"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Vidyut"
            android:paddingTop="5dp"
            android:textSize="30dp"
            
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="5dp"
            android:text="@string/about_vidyut"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"/>

        <ImageView
            android:id="@+id/amrita_logo"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="145dp"
            android:src="@drawable/amrita"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/amrita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Amrita"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/amrita_des"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:text="@string/our_sponsors"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_partner"
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_weight="1"
                android:id="@+id/byjus"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:layout_height="45dp"
                android:src="@drawable/byjus"
                android:scaleType="fitXY"
                />

            <ImageView
                android:layout_weight="1"
                android:id="@+id/digifuse"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:layout_height="45dp"
                android:src="@drawable/digifuse"
                />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digital_partner"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

        <ImageView
            android:id="@+id/zebronics"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="start"
            android:src="@drawable/zebronics"
            />

    </LinearLayout>
</ScrollView>